2013-02-27  Oliver Kiddle <opk@zsh.org>

	* 32314: Src/Zle/zle_main.c, Src/Zle/zle_tricky.c,
	Src/Zle/zle_utils.c, Src/Zle/zle_vi.c: merge undo events
	corresponding to vi change in the vi-cmd-mode widget so undo from
	insert mode is useful again

2014-01-30  Barton E. Schaefer  <schaefer@zsh.org>

	* 32322: Completion/Base/Core/_main_complete: display a message
	when completion is interrupted from the keyboard

2014-01-30  Peter Stephenson  <p.stephenson@samsung.com>

	* Jun T: 32300: Completion/Unix/Command/_od: +
	Completion/Unix/Command/.distfiles: new completion.

2014-01-29  Peter Stephenson  <p.stephenson@samsung.com>

	* Christian Hesse: 32316: Completion/Unix/Command/_ssh: complete
	new ssh key type.

2014-01-28  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 32303: Src/Zle/compcore.c, Completion/Zsh/Type/_parameters,
	Completion/Zsh/Context/_brace_parameter: allow completion
	of modifiers for parameters in a fairly simplistic way.

2014-01-28  Peter Stephenson  <p.stephenson@samsung.com>

	* 32308 (slightly modified to use "a" as the vi command at start
	of line): Src/Zle/zle_main.c, Src/Zle/zle_vi.c: improve
	initialising of vi mode change when entering viins at start of
	editing.

2014-01-27  Barton E. Schaefer  <schaefer@zsh.org>

	* users/18368: Completion/Unix/Command/_git: in __git_files,
	retry ls-files if nothing matched the prefix pattern, to give
	_multi_parts a shot at the whole file list.  Restores partial
	 path completion inadvertently removed by 31159.

2014-01-27  Peter Stephenson  <p.stephenson@samsung.com>

	* unposted: Src/zsh.mdd: update 31983 to suppress stdout from
	cmp, too.

2014-01-23  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/arith.yo: use LPAR()+RPAR() instead of parens
	in sqrt example

2014-01-23  Peter Stephenson  <p.stephenson@samsung.com>

	* 32299: Doc/Zsh/arith.yo, Functions/Misc/zcalc, Src/math.c,
	Src/params.c, Src/subst.c, Test/C01arith.ztst: add